--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <!-- NAVBAR -->
   <nav class="navbar">
-    <img src="img/1000091303-removebg-preview (1).png" alt="Logo" id="logo" />
+    <img src="./1000091303-removebg-preview (1).png" alt="Logo" id="logo" />
 
     <ul class="nav-links">
       <li><a href="#hero">Home</a></li>
@@ -33,7 +33,7 @@
 
   <!-- HERO -->
   <section id="hero" class="hero reveal">
-    <img src="img/hlobi.png" alt="Hlobisile" class="my-img" />
+    <img src="./hlobi.png" alt="Hlobisile" class="my-img" />
     <h1>Hlobisile Zulu</h1>
   </section>
 
